--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-author: yanm1ng # 作者
-description: yanm1ng's blog
-keyword: hexo-theme, vuejs
-favicon: 
+author: oatiz # 作者
+description: oatiz's blog
+keyword: JAVA, GOLANG
+favicon: https://raw.githubusercontent.com/oatiz/oatiz.github.io/master/brick.png
 
 excerpt_link: Read more
 
@@ -20,7 +20,7 @@ highlight:
 catalog: true
 
 # donate
-donate: true
+donate: false
 
 # qrcode
 qrcode: true
@@ -31,10 +31,10 @@ qrcode: true
 comment: gitment
 
 # gitment config
-gitment_owner: yanm1ng
-gitment_repo: yanm1ng.github.io
-gitment_oauth_id: 0f87e490e00ee3fd87ef
-gitment_oauth_secret: 4a9d2b148e7971c2201ad12131ce8bf8159ccd2e
+gitment_owner: oatiz
+gitment_repo: oatiz.github.io.source
+gitment_oauth_id: 2cd61beb1bc9eb976265
+gitment_oauth_secret: e2351ae3148a0afd2ac255464ed3e6182897746e
 
 # uyan
 # if you want to use uyan as your blog comment, plz remove/comment out gitment config
@@ -43,13 +43,13 @@ baidu_id:
 
 about: 
   banner: http://file.muyutech.com/about.jpg
-  avatar: https://avatars3.githubusercontent.com/u/16443628?v=3&s=460
-  description: "The end is always near."
-  weibo_username: yanm1ng
-  twitter_username: yanm1ng
-  github_username: yanm1ng
-  zhihu_username: yummy1121
-  douban_username: yanm1ng
+  avatar: https://raw.githubusercontent.com/oatiz/oatiz.github.io/master/avatar.jpg
+  description: "Stay hungry, Stay foolish"
+  #weibo_username: yanm1ng
+  #twitter_username: yanm1ng
+  github_username: oatiz
+  #zhihu_username: yummy1121
+  #douban_username: yanm1ng
 
 # MathJax Support
 mathjax:
