update avatar format :open_mouth:

--- a/_config.yml
+++ b/_config.yml
@@ -43,7 +43,7 @@ baidu_id:
 
 about: 
   banner: http://file.muyutech.com/about.jpg
-  avatar: https://coding.net/u/oatiz/p/oatiz/git/raw/master/images/avatar.jpg
+  avatar: https://coding.net/u/oatiz/p/oatiz/git/raw/master/images/avatar.png
   description: "Stay hungry, Stay foolish"
   #weibo_username: yanm1ng
   #twitter_username: yanm1ng
